# liveview-native-core

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE.md  Makefile.toml  Package.swift  README.md  index.html  jitpack.yml  metadata.json  rustfmt.toml
.cargo/: config.toml
.github/: dependabot.yaml
.github/workflows/: apple-devices.yml  ci.yml  macos.yml  release.yml  test-server.yml  uniffi-kotlin-tests.yml  uniffi-swift-test.yml  x86_64-apple-ios.yml  x86_64-linux-android.yml
crates/core/: Cargo.toml  README.md  build.rs  uniffi.toml
crates/core/c_src/include/: LiveViewNativeCore.h  Support.h  module.modulemap
crates/core/examples/: streaming.rs
crates/core/liveview-native-core-jetpack/: .gitignore  README.md  build.gradle.kts  jitpack.yml  settings.gradle.kts  uniffi.toml
crates/core/liveview-native-core-jetpack/.vim-lsp-settings/: settings.json
crates/core/liveview-native-core-jetpack/core/: .gitignore  build.gradle.kts  lint.xml
crates/core/liveview-native-core-jetpack/core/src/androidTest/java/org/phoenixframework/liveview_jetpack/: ExampleInstrumentedTest.kt
crates/core/liveview-native-core-jetpack/core/src/main/java/org/phoenixframework/liveview/lib/: Attribute.kt  Document.kt  JavaResult.kt  Node.kt  NodeRef.kt
crates/core/liveview-native-core-jetpack/core/src/test/java/org/phoenixframework/liveview_jetpack/: DocumentTest.kt
crates/core/liveview-native-core-jetpack/gradle/: libs.versions.toml
crates/core/liveview-native-core-jetpack/scripts/: prepareJitpackEnvironment.sh
crates/core/liveview-native-core-swift/: Package.swift
crates/core/liveview-native-core-swift/Benchmarks/LiveViewNativeCore/: Merging.swift
crates/core/liveview-native-core-swift/Sources/LiveViewNativeCore/: .gitignore  LiveViewNativeCore.swift  PhoenixChannelsClient.swift  Support.swift
crates/core/liveview-native-core-swift/Tests/LiveViewNativeCoreTests/: LiveViewNativeCoreSocketTests.swift  LiveViewNativeCoreTests.swift
crates/core/src/: callbacks.rs  lib.rs  lib.udl  live_socket.rs  persistence.rs  protocol.rs  uniffi.udl
crates/core/src/client/: config.rs  cookie_store.rs  inner.rs  logging.rs  mod.rs  tests.rs
crates/core/src/client/inner/: channel.rs  channel_init.rs  connected_client.rs  cookie_store.rs  dead_render.rs  event_loop.rs  logging.rs  mod.rs  navigation.rs  readonly_mutex.rs
crates/core/src/client/inner/event_loop/: mod.rs  state.rs
crates/core/src/client/tests/: lifecycle.rs  mod.rs  streaming.rs  upload.rs
crates/core/src/diff/: diff.rs  fragment.rs  mod.rs  morph.rs  patch.rs  traversal.rs
crates/core/src/diff/fragment/: error.rs  merge.rs  mod.rs  render.rs  tests.rs  wasm.rs
crates/core/src/diff/fragment/tests/: flow-1-change-0.html  flow-1-change-0.json  flow-1-change-1.html  flow-1-change-1.json  flow-1-change-2.html  flow-1-change-2.json  flow-1-change-3.html  flow-1-change-3.json  mod.rs  stream.rs
crates/core/src/dom/: attribute.rs  ffi.rs  mod.rs  node.rs  parser.rs  phoenix_consts.rs  printer.rs  select.rs
crates/core/src/error/: mod.rs  socket.rs
crates/core/src/ffi/: README.MD  android.rs  mod.rs  support.rs
crates/core/src/interner/: mod.rs  strings.txt
crates/core/src/live_socket/: channel.rs  error.rs  form.rs  mod.rs  protocol.rs  socket.rs  tests.rs
crates/core/src/live_socket/dom_locking/: mod.rs
crates/core/src/live_socket/navigation/: ffi.rs  mod.rs
crates/core/src/live_socket/protocol/: event.rs  mod.rs
crates/core/src/live_socket/tests/: error.rs  mod.rs  navigation.rs  streaming.rs  support.rs  upload.rs
crates/core/src/live_socket/tests/fixtures/: ReadMe.md
crates/core/src/live_socket/tests/fixtures/test_1.fixture/: expected_0.xml  expected_1.xml  return_payload_1.json
crates/core/src/live_socket/tests/fixtures/test_2.fixture/: expected_0.xml  expected_1.xml  return_payload_1.json  return_payload_2.json
crates/core/src/live_socket/tests/playback/: mod.rs
crates/core/src/parser/: mod.rs
crates/core/swift/: Package.swift
crates/core/swift/Sources/LiveViewNativeCore/: Support.swift
crates/core/swift/Tests/LiveViewNativeCoreTests/: LiveViewNativeCoreTests.swift
crates/core/tests/: diff.rs  dom.rs  parser.rs  uniffi.rs
crates/core/tests/bindings/: simple.kts  simple.swift
crates/core/tests/fixtures/: README.md
crates/core/tests/fixtures/attr-value-empty-string/: from.html  to.html
crates/core/tests/fixtures/data-table2/: to.html
crates/core/tests/fixtures/equal/: from.html
crates/core/tests/fixtures/input-element/: from.html  to.html
crates/core/tests/fixtures/input-element-disabled/: from.html  to.html
crates/core/tests/fixtures/input-element-enabled/: from.html
crates/core/tests/fixtures/large/: from.html  to.html
crates/core/tests/fixtures/svg-append/: to.html
crates/core/tests/fixtures/svg-append-new/: to.html
crates/core/tests/fixtures/svg-no-default-namespace/: from.html  to.html
crates/core/tests/fixtures/todomvc/: to.html
crates/core/tests/fixtures/todomvc2/: from.html  to.html
crates/core/tests/support/: linker_shim.sh
crates/core/tests/support/app/: .gitignore  Info.plist
crates/uniffi-bindgen/: Cargo.toml
crates/wasm/: Cargo.toml  ReadMe.md  build-as-js.sh  build.sh
crates/wasm/examples/: simple.rs
crates/wasm/npm_shims/: jest_mock.js  mock_esbuild.mjs
crates/wasm/scripts/: build.sh  jest_tests.sh  playwright_test.sh  test.sh
crates/wasm/src/: lib.rs
data/documentation/: liveviewnativecore.json
data/documentation/liveviewnativecore/: attribute.json  attributename.json  callerror.json  capacityerror.json  casterror.json  changetype.json  channel.json  channelerror.json  channeljoinerror.json  channelprotocol.json  channelshutdownerror.json  channelstatus.json  channelstatuses.json  channelstatusesprotocol.json  channelstatusjoinerror.json  closeframe.json  connecterror.json  connectopts.json  disconnecterror.json  document.json  documentchangehandler.json  (+82 more)
docs/swift/: metadata.json
index/: availability.index  data.mdb  index.json  navigator.index
swift/LiveViewNative/: .gitignore  Package.swift  README.md  build.xcconfig
(+2898 files in other folders)
