[workspace]
resolver = "2"
members = [
    "crates/core", "crates/uniffi-bindgen", "crates/wasm",
]

[workspace.package]
version = "0.4.0-alpha-10"
rust-version = "1.64"
authors = [
    "Paul Schoenfelder <paulschoenfelder@gmail.com>",
    "Thomas Sieverding <Thomas@bajix.com>",
    "Elle Imhoff <Kronic.Deth@gmail.com>"
]
description = "Provides core, cross-platform functionality for LiveView Native implementations"
repository = "https://github.com/liveview-native/liveview-native-core"
homepage = "https://github.com/liveview-native/liveview-native-core"
documentation = "https://github.com/liveview-native/liveview-native-core"
categories = ["API bindings", "GUI"]
keywords = ["liveview", "phoenix"]
license = "MIT"
license-file = "LICENSE.md"
readme = "README.md"
edition = "2021"
publish = false

[workspace.dependencies]
uniffi = "0.28.0" 

[profile.dev]
split-debuginfo = "unpacked"
debug = 2

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
strip = 'debuginfo'        # Strip symbols from binary*
split-debuginfo = "packed"
debug = 1


[patch.crates-io]
# https://github.com/kornelski/rust-security-framework/pull/201
security-framework =     { git = "https://github.com/kornelski/rust-security-framework.git", rev = "ea683f291bb8dff51d3239e556c3236e09274c16" }
security-framework-sys = { git = "https://github.com/kornelski/rust-security-framework.git", rev = "ea683f291bb8dff51d3239e556c3236e09274c16" }

# https://github.com/servo/core-foundation-rs/pull/679
core-foundation-sys = { git = "https://github.com/servo/core-foundation-rs", rev = "fb8fd65eef1b2ef247055e944cf258d53f2a517a" }

# https://github.com/rust-lang/socket2/pull/503
socket2 = { git = "https://github.com/rust-lang/socket2.git", rev = "3a938932829ea6ee3025d2d7a86c7b095c76e6c3" }

#tokio-tungstenite = { git = "https://github.com/simlay/tokio-tungstenite.git", branch = "add-browser-wasm-support"}
#tokio = { git = "https://github.com/simlay/tokio.git", branch = "use-web-time-on-wasm32-unknown-unknown" }
