[workspace]
resolver = "2"
members = ["crates/core", "crates/uniffi-bindgen", "crates/wasm"]

[workspace.package]
version = "0.4.0-rc-4"
rust-version = "1.64"
authors = [
    "Paul Schoenfelder <paulschoenfelder@gmail.com>",
    "Thomas Sieverding <Thomas@bajix.com>",
    "Elle Imhoff <Kronic.Deth@gmail.com>",
]
description = "Provides core, cross-platform functionality for LiveView Native implementations"
repository = "https://github.com/liveview-native/liveview-native-core"
homepage = "https://github.com/liveview-native/liveview-native-core"
documentation = "https://github.com/liveview-native/liveview-native-core"
categories = ["API bindings", "GUI"]
keywords = ["liveview", "phoenix"]
license = "MIT"
license-file = "LICENSE.md"
readme = "README.md"
edition = "2021"
publish = false

[workspace.dependencies]
uniffi = "0.28.0"

[profile.dev]
split-debuginfo = "unpacked"
debug = 2

[profile.release]
opt-level = 'z'            # Optimize for size
lto = true                 # Enable link-time optimization
codegen-units = 1          # Reduce number of codegen units to increase optimizations
strip = 'debuginfo'        # Strip symbols from binary*
split-debuginfo = "packed"
debug = 1

[patch.crates-io]
# https://github.com/rust-lang/socket2/pull/503
socket2 = { git = "https://github.com/rust-lang/socket2.git", rev = "3a938932829ea6ee3025d2d7a86c7b095c76e6c3" }
