[package]
name = "liveview-native-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
categories.workspace = true
keywords.workspace = true
license-file.workspace = true
readme.workspace = true
publish.workspace = true


[lib]
crate-type = [
    "staticlib",
    "rlib",
    "cdylib"
]
name = "liveview_native_core"

[features]
default = ["liveview-channels-tls"]
liveview-channels = [
    "phoenix_channels_client",
    "reqwest",
    "uniffi/tokio",
]
liveview-channels-tls = [
    "liveview-channels",
    "reqwest/native-tls-vendored",
    "phoenix_channels_client/native-tls",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cranelift-entity = { version = "0.110" }
fixedbitset = { version = "0.4" }
fxhash = { version = "0.2" }
html5gum = { git = "https://github.com/liveviewnative/html5gum", branch = "lvn" }
petgraph = { version = "0.6", default-features = false, features = ["graphmap"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
smallstr = { version = "0.3", features = ["union"] }
smallvec = { version = "1.10", features = ["union", "const_generics", "specialization"] }
thiserror = "1.0"
log = "0.4"
reqwest = { version = "0.12.3", default-features = false, optional = true }
uniffi = { version = "0.28" }
phoenix_channels_client = { git = "https://github.com/liveview-native/phoenix-channels-client", branch = "main", optional = true }

[build-dependencies]
Inflector = "0.11"

[dev-dependencies]
paste = { version = "1.0" }
pretty_assertions = { version = "1.4.0" }
text-diff = { version = "0.4.0" }
uniffi = { version = "0.28", features = ["bindgen-tests", "tokio"]}
tokio = { version = "1.39", features = ["full"] }
env_logger = "0.11.1"

# For image generation for tests
image = "0.25.1"
tempfile = "3.9.0"
