[package]
name = "liveview-native-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
publish.workspace = true


[lib]
crate-type = ["staticlib", "rlib", "cdylib"]
name = "liveview_native_core"

[features]
default = ["liveview-channels-tls"]
liveview-channels = [
    "phoenix_channels_client",
    "reqwest",
    "uniffi/tokio",
    "cookie_store",
    "reqwest_cookie_store",
    "tokio",
    "openssl",
]
liveview-channels-tls = [
    "liveview-channels",
    "reqwest/native-tls-vendored",
    "phoenix_channels_client/native-tls",
    "phoenix_channels_client/default",
]

# This is for support of phoenix-channnels-client in for wasm.
browser = [
    #"liveview-channels",
    #"phoenix_channels_client/browser",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#
[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15"
openssl = { version = "=0.10.71", features = ["vendored"], optional = true }

[target.'cfg(target_vendor = "apple")'.dependencies]
oslog = "0.2.0"

[dependencies]
serde_urlencoded = "0.7.1"
cranelift-entity = { version = "0.117" }
fixedbitset = { version = "0.5.7" }
fxhash = { version = "0.2" }
html5gum = { git = "https://github.com/liveviewnative/html5gum", branch = "lvn" }
petgraph = { version = "0.7.1", default-features = false, features = [
    "graphmap",
] }
futures = "0.3.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
smallstr = { version = "0.3", features = ["union"] }
smallvec = { version = "1.14", features = ["union", "const_generics"] }
thiserror = "2.0"
log = "0.4"
tokio-util = "0.7.3"
reqwest = { version = "0.12.12", default-features = false, optional = true, features = [
    "cookies",
] }
cookie_store = { version = "0.21.1", default-features = false, optional = true }
reqwest_cookie_store = { version = "0.8.0", default-features = false, optional = true }
env_logger = "0.11.1"
uniffi = { workspace = true }

tokio = { version = "1.44", features = ["full"], optional = true }
phoenix_channels_client = { git = "https://github.com/liveview-native/phoenix-channels-client.git", branch = "main", optional = true, default-features = false }
# This is for wasm support on phoenix-channels-client
#phoenix_channels_client = { git = "https://github.com/liveview-native/phoenix-channels-client.git", branch = "simlay/webassembly-support", optional = true, default-features = false }

[build-dependencies]
Inflector = "0.11"

[dev-dependencies]
paste = { version = "1.0" }
pretty_assertions = { version = "1.4.0" }
text-diff = { version = "0.4.0" }
uniffi = { workspace = true, features = ["bindgen-tests", "tokio"] }

# For image generation for tests
image = "0.25.1"
tempfile = "3.19.1"
