[package]
name = "liveview_native_core_wasm"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
license-file.workspace = true
readme.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.92"
serde-wasm-bindgen = "0.6.5"
serde = { version = "1.0", features = ["derive"] }
liveview-native-core = { path = "../core/", default-features = false, features = ["browser"]}
#liveview-native-core = { path = "../core/", default-features = false }
phoenix_channels_client = { path = "../../../phoenix-channels-client/", default-features = false, features = ["browser"]}
tokio = { version = "1.39.2", features = ["macros", "rt", "time"] }
console_error_panic_hook = { version = "0.1.7" }
console_log = { version = "1", features = ["color"] }
log = "0.4"
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3.69"

[dev-dependencies]
url = "2.5"
uuid = { version = "1.10.0", features = ["v4"] }
wasm-bindgen-test = "0.3.42"
wasm-bindgen-futures = { version = "0.4.31", features = ["futures-core-03-stream"] }
#wasm-bindgen-test = "0.3.42"
#phoenix_channels_client = { path = "../../../phoenix-channels-client/", optional = true }
